2008-12-26  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (evalAfter): Added new eval System. It needs refactoring.

        * compiler.scm (compile-w/o-halt): Adde for new eval.

2008-12-25  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (scan): Fixed nested comment. Thanks to leque.
                     (scan): Fixed #!r6rs comment style.
                     (Scanner::scan): Added DELMITER support.

        * Passed all of conditions tests of R6RS test suite.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added i/o-error-position

        * Passed all of R5RS compatibility tests of R6RS test suite.

        * tools/psyntax-r6rs/rev10_to_10/psyntax-buildscript-mosh.ss (identifier->library-map): Added ne,se to definition of '=>'.

        * test-data.scm (read-write-invariant?): Added some tests.

        * TextualOutputPort.cpp (putDatum): Fixed write of #\nul. (Thanks to leque).
                                (putDatum): Added write of #\vtab.
                                (putDatum): Fixed write of strings which include "\a".

        * Passed all of reader tests of R6RS test suite.

        * r6rs-test-suite/Makefile: Added reader test.

        * scanner.re (Scanner::scan): Fixed reader of number. It needed delimiter, but now not necessary.

2008-12-24  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp (putDatum): Fixed. In some situation Flonum write buffer is not enough.

        * library.scm (char-general-category): Fixed wrong usage of integer->char.

        * ucs4string.h : Added isValidScalar(). It checks whether integer value is valid Unicode scalar or not.

        * VM.cpp (getStackTrace): Improved stack trace.

2008-12-23  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (guard-macro): Fixed.

        * VM.cpp (VM::run): Added LOCAL_CALL instruction for better performance.
